# test-teamcity

./: Dockerfile  README.md  pyproject.toml
.teamcity/: settings.kts
tests/: test_core.py
